# Bovara-Labs-UBC-RedTeam-Hackathon-2026

./: .gitignore  DATA_FILES.md  README.md  run.bat  run.sh
FindMyForce-API/: pyproject.toml  retrain.py
FindMyForce-API/config/: pathloss.json  receivers.json
FindMyForce-API/dataset/eval_feedback/: eval_attempt_1.json
FindMyForce-API/findmyforce/: findmyforce.py  main.py  triangulation_service.py  web_server.py
FindMyForce-API/findmyforce/classification/: __init__.py  features.py  ml_classifier.py  observer.py
FindMyForce-API/findmyforce/geolocate/: __init__.py  coordinates.py  geolocate.py  rssi.py  tdoa.py
FindMyForce-API/findmyforce/grouping/: __init__.py  signal_grouping.py
FindMyForce-API/findmyforce/pipeline/: __init__.py  processor.py
FindMyForce-API/findmyforce/util/: api_server.py  configs.py
FindMyForce-API/test/: generate_synthetic.py  test_obsrv.json  test_obsrv.py
FindMyForce-Web/: index.html  package-lock.json  package.json  vite.config.js
FindMyForce-Web/src/: App.jsx  Globe.jsx  Inspector.jsx  MapView.jsx  Sidebar.jsx  data.js  index.css
