[project]
name = "findmyforce"
version = "0.1.0"
description = ""
authors = [
    {name = "Johnavon",email = "jvt@ztcdev.org"}
]
requires-python = ">=3.13"
dependencies = [
    "scipy (>=1.17.1,<2.0.0)"
]

[dependency-groups]
dev = [
    "requests (>=2.32.5,<3.0.0)",
    "numpy (>=2.4.2,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "tensorflow (>=2.21.0,<3.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
